<resources>
    <string name="app_name">健康助手</string>
    <string name="login">登陆</string>
    <string name="regist">没有账号？注册一个</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="password">密码：</string>
    <string name="confirmPassword">确认密码：</string>
    <string name="oldPassword">旧密码：</string>
    <string name="account">账号：</string>
    <string name="accountHint">手机号码</string>
    <string name="logo">logo</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="more">更多</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>
    <string name="default_date">2016-2-3</string>
    <string name="default_time">19:23</string>
    <string name="electrocar_diogram">心电</string>
    <string name="blood_sugar">血糖</string>
    <string name="blood_pressu">血压</string>
    <string name="blood_fat">血脂</string>
    <string name="blood_oxygen">血氧</string>
    <string name="amount">mmol/L</string>
    <string name="sync_blood_suger">同步血糖仪数据</string>
    <string name="sendbutton">手动输入血糖仪数据</string>
    <string name="query_medicine">用药查询</string>
    <string name="doctor_info">主治医生信息</string>
    <string name="filterItem1">最近一周</string>
    <string name="filterItem2">最近一个月</string>
    <string name="filterItem3">最近三个月</string>
    <string name="startTime">起始时间</string>
    <string name="endTime">截至时间</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="identityCard">身份证号：</string>
    <string name="answer">答案：</string>
    <string name="submit">提交</string>

    <string name="checkNewVersion">检查新版本</string>
    <string name="sugession">反馈与建议</string>
    <string name="copyRight">\t\t\t\t\tSTU 版权所有\nCopyright © 2016-2017 Wellingjin\n\t\t\tAll Rights Reserved</string>

    <string name="accountChange">切换账号</string>
    <string name="alertSetting">提醒设置</string>
    <string name="exitAccount">注销当前账号</string>

    <string name="persion">个人</string>
    <string name="doctor">医生</string>

    <string-array name="questions">
        <item>你的妻子叫什么？</item>
        <item>你的女儿叫什么？</item>
        <item>你的初恋叫什么？</item>
    </string-array>
    <string name="question1">你的生日？</string>
    <string name="question2">你最喜欢看的书？</string>
    <string name="question3">你最喜欢的人？</string>

    <string name="baseInfo">基本信息</string>
    <string name="persionalInfo">个人信息</string>
    <string name="secureQuestion">密保问题</string>
    <string name="personName">姓名：</string>
    <string name="phone">手机：</string>
    <string name="sex">性别：</string>
    <string name="birdthday">出生日期：</string>
    <string name="r_age">年龄：</string>

    <string name="update">上传</string>
	
	<string name="ble_not_supported">该设备不支持BLE</string>
    <string name="connected">已连接</string>
    <string name="disconnected">正在连接...</string>
    <string name="title_devices">可用设备</string>
    <string name="error_bluetooth_not_supported">该设备不支持蓝牙</string>
    <string name="textViewState">没发现 iGate 设备</string>
    <string name="button_config">新蓝牙一键配置</string>
    <string name="button_send">下载蓝牙数据</string>
    <string name="finish">下载完成，返回</string>
    <string name="mind"> </string>
    <string name="cleandata">清除血糖仪数据</string>
    <string name="dataup">上  传  数  据</string>
    <string name="str_connected">iGate设备连接:</string>
    <string name="str_scanning">正在查找iGate设备...</string>
    <string name="str_idle">iGate 闲置中...</string>
    <string name="str_found">找到iGate设备:</string>

    <string name="measure_blood">测量血压</string>
    <string name="scan">扫描</string>
    <string name="stop">停止</string>
    <string name="nodevice">没有扫描到可用设备</string>
    <string name="unknown_device">未知设备</string>

    <string name="perfession">专业</string>
    <string name="name">姓名</string>
    <string name="hosipital">医院</string>
    <string name="detailSex">性别</string>
    <string name="age">年龄</string>
    <string name="address">办公地址</string>
    <string name="nation">国籍</string>
    <string name="detailPhone">手机</string>
    <string name="email">邮箱</string>
    <string name="bloodOxygenNoValue">_ _</string>
    <string name="bmp">脉率</string>
    <string name="PI">PI</string>
    <string name="upload_data_finishing">测量正在进行</string>
    <string name="upload_data_finished">测量已经结束</string>
    <string name="measure_record">最近测量记录</string>

    <string name="updatebyhand">手动上传</string>
    <string name="updatebyautome">自动上传</string>
</resources>
