<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            >
            <TableRow>
                <TextView
                    android:text="@string/name"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:text="@string/app_name"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TableRow>
                <TextView
                    android:text="@string/perfession"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TableRow>
                <TextView
                    android:text="@string/hosipital"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:text="@string/app_name"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />

            <TableRow>
                <TextView
                    android:text="@string/detailSex"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:text="男"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TableRow>
                <TextView
                    android:text="@string/age"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:text="25"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TableRow>
                <TextView
                    android:text="@string/nation"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:text="中国"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TableRow>
                <TextView
                    android:text="@string/address"
                    android:textSize="@dimen/detail_size"
                    />
            </TableRow>

            <TextView
                android:text="中国广东省汕头市汕头大学大学路243号"
                android:textSize="@dimen/detail_size"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TableRow>
                <TextView
                    android:text="@string/detailPhone"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:text="13750406545"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TableRow>
                <TextView
                    android:text="@string/email"
                    android:textSize="@dimen/detail_size"
                    />
                <TextView
                    android:text="13750406545@360.com"
                    android:textSize="@dimen/detail_size"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:background="@color/colorBlack"
                />
            <TextView
                android:text="@string/persionalInfo"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:text="我是花果山水帘洞齐天大圣孙悟空"
                android:textSize="@dimen/detail_size"
                />
        </TableLayout>
    </ScrollView>
</LinearLayout>
