<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:id="@+id/doctorDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
        <TableRow>
            <TextView
                android:text="@string/name"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/doctorName"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TableRow>
            <TextView
                android:text="@string/perfession"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/perfession"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TableRow>
            <TextView
                android:text="@string/hosipital"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/hospital"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
           />

        <TableRow>
            <TextView
                android:text="@string/detailSex"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/doctorSex"
                android:text="男"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TableRow>
            <TextView
                android:text="@string/age"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/doctorAge"
                android:text="25"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TableRow>
            <TextView
                android:text="@string/nation"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/nation"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TableRow>
            <TextView
                android:text="@string/address"
                android:textSize="@dimen/detail_size"
                />
        </TableRow>

        <TextView
            android:id="@+id/doctorAddress"
            android:textSize="@dimen/detail_size"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TableRow>
            <TextView
                android:text="@string/detailPhone"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/doctorTel"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TableRow>
            <TextView
                android:text="@string/email"
                android:textSize="@dimen/detail_size"
                />
            <TextView
                android:id="@+id/doctorEmail"
                android:textSize="@dimen/detail_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
        </TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineWidth"
            android:background="@color/colorBlack"
            />
        <TextView
            android:text="@string/persionalInfo"
            android:textSize="@dimen/detail_size"
            />
        <TextView
            android:id="@+id/doctorInfo"
            android:textSize="@dimen/detail_size"
            />
    </TableLayout>
    </ScrollView>
</LinearLayout>
