<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persionalInfo"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/colorGrate"
        android:textColor="@color/colorWhite"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/personName"
            android:textSize="@dimen/normalTextSize"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_vertical_margin"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone"
            android:textSize="@dimen/normalTextSize"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:inputType="phone"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/identityCard"
            android:textSize="@dimen/normalTextSize"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/registerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="@dimen/normalTextSize"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            />
        <TextView
            android:id="@+id/registerSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textSize="@dimen/normalTextSize"
            android:text="男"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birdthday"
            android:textSize="@dimen/normalTextSize"
            android:gravity="end"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            />
        <TextView
            android:id="@+id/registerBirdthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textSize="@dimen/normalTextSize"
            android:text="@string/default_date"
            />
    </LinearLayout>
        </LinearLayout>
</ScrollView>
</LinearLayout>
