<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.welling.kinghacker.customView.RippleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/filterButtonColor"
                android:text="@string/filterItem1"
                android:textColor="@color/buttonTextColor"
                android:textSize="@dimen/buttonTextSize"
                />
        </com.welling.kinghacker.customView.RippleView>
        <com.welling.kinghacker.customView.RippleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/filterButtonColor"
                android:text="@string/filterItem2"
                android:textColor="@color/buttonTextColor"
                android:textSize="@dimen/buttonTextSize"
                />
        </com.welling.kinghacker.customView.RippleView>
        <com.welling.kinghacker.customView.RippleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/filterButtonColor"
                android:text="@string/filterItem3"
                android:textColor="@color/buttonTextColor"
                android:textSize="@dimen/buttonTextSize"
                />
        </com.welling.kinghacker.customView.RippleView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/startTime"
            android:textSize="@dimen/buttonTextSize"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/startDate"
            android:text="@string/default_date"
            android:textSize="@dimen/date_size"
            android:textColor="@color/buttonTextColor"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/endTime"
            android:textSize="@dimen/buttonTextSize"
            />
        <TextView
            android:id="@+id/endDate"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            android:textSize="@dimen/date_size"
            android:textColor="@color/buttonTextColor"
            />
    </LinearLayout>
    <com.welling.kinghacker.customView.RippleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/buttonTextSize"
            android:background="@color/filterButtonColor"
            android:text="@string/confirm"
            />
    </com.welling.kinghacker.customView.RippleView>

</LinearLayout>
